# starfix

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ENDIANNESS.md  README.md  cspell.json  devcontainer.json  pyproject.toml  release.toml  uniffi.toml
.github/workflows/: ci.yml  clippy.yml  maturin-release.yml  release.yml
docs/: byte-layout-spec.md  design-spec.md  implementation-plan.md
docs/metamorphic/plans/: 2026-06-17-include-metadata-hashing.md
docs/metamorphic/specs/: 2026-06-17-include-metadata-hashing-design.md  2026-06-18-golden-vector-parity-design.md
notebooks/: Example Python Usage.ipynb
python/starfix/: __init__.py  arrow_digester.py
src/: arrow.rs  arrow_digester.rs  arrow_digester_core.rs  lib.rs  pyarrow.rs
tests/: arrow_digester.rs  digest_bytes.rs  golden_vectors.rs
tests/golden_files/: schema_serialization_pretty.json
