[package]
name = "starfix"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "56.0.0", features = ["ffi"] }
arrow-digest = "56.0.0"
sha2 = "0.10.9"
# automated CFFI + bindings in other languages
uniffi = { version = "0.29.4", features = ["cli", "tokio"] }

[[bin]]
name = "uniffi-bindgen"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }


[lib]
crate-type = ["rlib", "cdylib"]
