[build-system]
requires = ["maturin>=1.9.6"]
build-backend = "maturin"

[project]
name = "starfix"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
description = "Library for logical hashing of structured data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipykernel>=7.1.0", "maturin>=1.9.6", "pyarrow>=22.0.0"]


[tool.maturin]
python-source = "python"          # if you have additional Python code
module-name = "starfix._internal" # the Rust extension module
